--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body{
 
 @media only screen and (max-width: 900px) {
     body{
-        background-image: fixed;
+        background-image: scroll;
         background-position: -85% 70%;
         background-size: cover;
     }
