--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body{
 
 @media only screen and (max-width: 900px) {
     body{
-        background-image: scroll;
+        background-size: scroll;
         background-position: 65% 70%;
         background-size: 275% 100%;
     }
