--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ body{
 @media only screen and (max-width: 900px) {
     body{
         background-attachment: scroll;
+        background-attachment: fixed;
         background-position: 60% 70%;
     }
     .logo{
