--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
   background: url('https://wallpaperaccess.com/full/831751.png');
-  background-position: 160% 100%;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: repeat-x;
@@ -144,7 +143,11 @@ body{
 @media only screen and (max-width: 900px) {
     body{
         background-attachment: fixed;
-        background-position: 60% 70%;
+        background-size: cover;
+        background-position: 100% 100%;
+        background: url('https://wallpaperaccess.com/full/831751.png');
+        background-repeat: repeat;
+        object-position: -20% 40%;
     }
     .logo{
         width: 300px
