--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
-  background: url('https://wallpaperaccess.com/full/831751.png');
-  background-position: 160% 100%;
+  background-image: url('https://wallpaperaccess.com/full/831751.png');
+  background-position: -520px;
   background-attachment: fixed;
   background-size: cover;
+  background-repeat: repeat-x;
   background-color: black;
   font-size: 12px;
   text-align: center;
-  
 }
 .logo{
     width: 500px;
@@ -143,9 +143,11 @@ body{
 @media only screen and (max-width: 900px) {
     body{
         background-attachment: fixed;
-        background-position: 100% 100%;
-        background: url('https://wallpaperaccess.com/full/831751.png');
-        background-repeat: repeat;
+        background-position: -10px;
+        background-image: url('https://wallpaperaccess.com/full/831751.png');
+        background-repeat: repeat-x;
+        background-size: cover;
+        /* background-position: stretch; */
     }
     .logo{
         width: 300px
