--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('https://wallpaperaccess.com/full/831751.png');
+  background: url('https://wallpaperaccess.com/full/831751.png');
   background-position: -520px;
   background-attachment: fixed;
   background-size: cover;
@@ -7,6 +7,7 @@ body{
   background-color: black;
   font-size: 12px;
   text-align: center;
+  
 }
 .logo{
     width: 500px;
@@ -143,11 +144,9 @@ body{
 @media only screen and (max-width: 900px) {
     body{
         background-attachment: fixed;
-        background-position: -10px;
-        background-image: url('https://wallpaperaccess.com/full/831751.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: stretch;
+        background-position: 100% 100%;
+        background: url('https://wallpaperaccess.com/full/831751.png');
+        background-repeat: repeat;
     }
     .logo{
         width: 300px
